--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,7 +7,7 @@
 # Prerequisites: $NPM_TOKEN setup in the Deployment variables.
 # For advanced cases, please, follow examples from the pipe's README https://bitbucket.org/atlassian/npm-publish/src/master/README.md
 
-image: node:10.15.3
+image: node:latest
 
 pipelines:
   default:
