--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,23 +12,6 @@ image: node:latest
 pipelines:
   default:
     - parallel:
-      - step:
-          name: Build and Test
-          caches:
-            - node
-          script:
-            - yarn
-            - yarn test
-      - step:
-          name: Lint the node package
-          script:
-            - yarn install eslint
-            - npx eslint .
-          caches:
-            - node
-  branches:
-    master:
-      - parallel:
         - step:
             name: Build and Test
             caches:
@@ -37,11 +20,28 @@ pipelines:
               - yarn
               - yarn test
         - step:
-            name: Security Scan
+            name: Lint the node package
             script:
-              # Run a security scan for sensitive data.
-              # See more security tools at https://bitbucket.org/product/features/pipelines/integrations?&category=security
-              - pipe: atlassian/git-secrets-scan:0.4.3
+              - yarn install eslint
+              - npx eslint .
+            caches:
+              - node
+  branches:
+    master:
+      - parallel:
+          - step:
+              name: Build and Test
+              caches:
+                - node
+              script:
+                - yarn
+                - yarn test
+          - step:
+              name: Security Scan
+              script:
+                # Run a security scan for sensitive data.
+                # See more security tools at https://bitbucket.org/product/features/pipelines/integrations?&category=security
+                - pipe: atlassian/git-secrets-scan:0.4.3
       - step:
           name: Deploy to Production
           deployment: Production
@@ -49,7 +49,7 @@ pipelines:
             # Update apt repos (just incase)
             - apt update
             # Ensure base dependencies are available
-            - apt install dpkg fakeroot
+            - apt install dpkg fakeroot rpmbuild mono wine snapcraft
             # Install Node Deps
             - yarn
             # Build
