--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -49,7 +49,7 @@ pipelines:
             # Update apt repos (just incase)
             - apt update
             # Do things to allow mono to install
-            - apt install dirmngr gnupg apt-transport-https ca-certificates libc6=2.27 -y -f
+            - apt install dirmngr gnupg apt-transport-https ca-certificates libc6=2.27-3 -y -f
             - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
             - sh -c 'echo "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" > /etc/apt/sources.list.d/mono-official-stable.list'
             - apt update
