--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -53,6 +53,8 @@ pipelines:
             - apt install dirmngr gnupg apt-transport-https ca-certificates libc6=2.27-3ubuntu1.3 -y -f
             - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
             - sh -c 'echo "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" > /etc/apt/sources.list.d/mono-official-stable.list'
+            - sh -c 'echo "deb http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages" > /etc/apt/sources.list.d/debian-bionic-security-for-mono.list'
+            - sh -c 'echo "deb http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages" > /etc/apt/sources.list.d/debian-bionic-updates-for-mono.list'
             - apt update
             # Ensure base build dependencies are available
             - apt install dpkg fakeroot rpm mono-runtime wine snapd libmono-system4.0-cil mono-4.0-gac -y
