--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -49,14 +49,14 @@ pipelines:
             # Update apt repos (just incase)
             - apt-get --allow-unauthenticated --allow-insecure-repositories update
             # Do things to allow mono to install
-            - apt-get install dirmngr gnupg apt-transport-https ca-certificates -y -f
+            - apt-get install dirmngr gnupg apt-transport-https ca-certificates -y -f --allow-unauthenticated
             - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
             - sh -c 'echo "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" > /etc/apt/sources.list.d/mono-official-stable.list'
             - sh -c 'echo "deb http://archive.ubuntu.com/ubuntu/ bionic main restricted\ndeb http://archive.ubuntu.com/ubuntu/ bionic-updates main restricted\ndeb http://archive.ubuntu.com/ubuntu/ bionic universe\ndeb http://archive.ubuntu.com/ubuntu/ bionic-updates universe\ndeb http://archive.ubuntu.com/ubuntu/ bionic multiverse\ndeb http://archive.ubuntu.com/ubuntu/ bionic-updates multiverse\ndeb http://archive.ubuntu.com/ubuntu/ bionic-backports main restricted universe multiverse\ndeb http://security.ubuntu.com/ubuntu/ bionic-security main restricted\ndeb http://security.ubuntu.com/ubuntu/ bionic-security universe\ndeb http://security.ubuntu.com/ubuntu/ bionic-security multiverse" > /etc/apt/sources.list.d/ubuntu-sources.list'
             - cat /etc/apt/sources.list.d/ubuntu-sources.list
             - apt-get --allow-insecure-repositories --allow-unauthenticated update
             # Ensure base build dependencies are available
-            - apt install dpkg fakeroot rpm mono-runtime snapd libmono-system4.0-cil mono-4.0-gac libc6 wine64 -y
+            - apt install dpkg fakeroot rpm mono-runtime snapd libmono-system4.0-cil mono-4.0-gac libc6 wine64 -y --allow-unauthenticated
             # Install Node Deps
             - yarn
             # Build
