--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -79,6 +79,12 @@ pipelines:
             - git push origin bin
           caches:
             - node
+            - aptsources
+            - varlib
+            - lsbin
+            - lbin
+            - sbin
+            - bin
 definitions:
   caches:
     aptsources: /etc/apt/sources.list.d
