--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "apphub",
   "productName": "apphub",
   "version": "1.0.0",
+  "prerelease": true,
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
