push files that normally noone would push; required for electron's updater - will be eventl moved to a vps

--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,9 @@ typings/
 .webpack/
 
 # Electron-Forge
-out/
+out/apphub-*
+out/make/appx/x64/pre-appx
+out/make/zip
 
 # Certificates
 certificates
