--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apphub",
   "productName": "apphub",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha1",
   "prerelease": true,
   "description": "My Electron application description",
   "main": "src/index.js",
